# Solar-Neo

./: README.md  index.HTML  index.html  install.sh  neo.sh  pyproject.toml  uninstall.sh
Solar-Neo-Web-Final/docs/: documentation.html  index.html  latest.html  version.html  versions.html
Solar-Neo-Web-Final/docs/assets/css/: style.css
Solar-Neo-Web-Final/docs/assets/js/: common.js
Solar-Neo-Web-Final/notes/: notes.json
Versions/: Version_Index.json
Versions/Solar-Neo-v0.7/Release/: install.sh
Website/: Read Me!.MD
cgi-bin/: submit_note.py
data/notes/: OBS.json  obs.json
docs/: documentation.html  flappy.html  index.html  latest.html  notes.html  version.html  versions.html
docs/assets/css/: style.css
docs/assets/js/: common.js  flappy.js  notes.js  site.js  version.js  versions.js
neo/: __main__.py  loader.py
neo/backends/: apt.py  aur.py  base.py  dnf.py  flatpak.py  pacman.py  rpm_ostree.py
neo/utils/: pretty.py  run.py
solarneo/: __init__.py  __main__.py
solarneo/utils/: pretty.py  run.py  sys.py  update.py
