[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-pkg"
version = "0.3.0"
description = "Universal APT-style installer for every Linux distro"
authors = [{name="neo contributors"}]
license = {text="GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
neo = "neo.__main__:entrypoint"
